adding mongodb atlas

--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ REACT_APP_APP_ID=AbCYI4YzBadsRsreKzt5aXjKbfFrTA-4hJzYnXP6qytJfrFZgzJ0NJ4oQ8NVhez
 
 paypalSecret=EM7Cpa8lCG-PNiVMNv9_nPAHKQ2K-v5HYm6tWUaJ8XVXk6VJnR_Gq4ujXcJUgk-dYCI0mV6AZBvVp7Pg
 
-
+MONGOURL = mongodb+srv://wrose001:Vermont1!@cluster0.a9ppc.mongodb.net/shades?retryWrites=true&w=majority
    
